Ajustes de Texto

--- a/index.html
+++ b/index.html
@@ -278,19 +278,19 @@
       <div class="row section-counter">
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
           <h1 class="number" data-number="15">15</h1>
-          <span>Clients</span>
+          <span>Clientes</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
           <h1 class="number" data-number="28">28</h1>
-          <span>Project Compleate</span>
+          <span>Proyectos Completados</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
           <h1 class="number" data-number="6">6</h1>
-          <span>Project Ongoing</span>
+          <span>Proyectos en curso</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
           <h1 class="number" data-number="15">15</h1>
-          <span>Client Satisfaction</span>
+          <span>Clientes Satisfechos</span>
         </div>
       </div>
     </div>
