Ajustes de Texto 5

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- Caption header -->
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Bienvenidos</h5>
-      <h1 class="fw-light mb-4">Hola, soy <b class="fg-theme">Marcelo</b> Noguera</h1>
+      <h1 class="fw-light mb-4">Hola, soy <b class="fg-theme">Marcelo</b></h1>
       <div class="badge">App & Web Developer</div>
     </div> <!-- End Caption header -->
     <div class="floating-button"><span class="ti-mouse"></span></div>
@@ -89,7 +89,8 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Marcelo Noguera</h1>
           <h5 class="fg-theme mb-3">App & Web Developer</h5>
-          <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form but the majority have suffered alteration in some</p>
+          <p class="text-muted">Un gusto! Mi nombre es Marcelo, soy desarrollador web y consultor de ciberseguridad, actualmente me desempeño en ambas ramas y son mis pasiones mas grandes dentro del mundo de la tecnología. 
+           <br> Conoce un poco sobre mis proyectos y habilidades aqui.</p> <br>
           <ul class="theme-list">
             <li><b>De:</b> Nicaragua</li>
             <li><b>Vivo en:</b> Managua</li>
