--- a/index.html
+++ b/index.html
@@ -333,39 +333,39 @@
             </div>
           </div>
         </div>
-        <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
+        <a class="grid-item apps ios wow zoomIn" href="./Gaming Dashboard/src/App.jsx">
+          <div class="img-place" data-src="assets/img/work/work-3.jpg">
             <img src="assets/img/work/work-3.jpg" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">Gaming Dashboard</h5>
               <p>Games, Streaming</p>
             </div>
           </div>
-        </div>
+        </a>
         <div class="grid-item graphic ui-ux wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
+          <div class="img-place" data-src="assets/img/work/work-4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Streaming</h5> <p>Games</p>">
             <img src="assets/img/work/work-4.jpg" alt="">
+            <div class="img-caption">
+              <h5 class="fg-theme">Gaming Streaming</h5>
+              <p>Games</p>
+            </div>
+          </div>
+        </div>
+        <div class="grid-item apps ios wow zoomIn">
+          <div class="img-place" data-src="assets/img/work/work-5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
+            <img src="assets/img/work/work-5.jpg" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">Drugs Delivery App</h5>
               <p>Health, Drugs</p>
             </div>
           </div>
         </div>
-        <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Musics Discover</h5> <p>Musics, Dashboard</p>">
-            <img src="assets/img/work/work-5.jpg" alt="">
+        <div class="grid-item graphic ui-ux wireframes wow zoomIn">
+          <div class="img-place" data-src="assets/img/work/work-6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Musics Discover</h5> <p>Musics, Dashboard</p>">
+            <img src="assets/img/work/work-6.jpg" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">Musics Discover</h5>
               <p>Musics, Dashboard</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid-item graphic ui-ux wireframes wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Game Streaming</h5> <p>Games, Streaming</p>">
-            <img src="assets/img/work/work-6.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Game Streaming</h5>
-              <p>Games, Streaming</p>
             </div>
           </div>
         </div>
