--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             </div>
           </div>
         </div>
-        <a class="grid-item apps ios wow zoomIn" href="./Gaming Dashboard/src/App.jsx">
+        <a class="grid-item apps ios wow zoomIn" href="https://63829a09c5e11b662866a4db--prismatic-zabaione-140ff6.netlify.app/">
           <div class="img-place" data-src="assets/img/work/work-3.jpg">
             <img src="assets/img/work/work-10.jpg" alt="">
             <div class="img-caption">
