--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
           <ul class="theme-list">
             <li><b>De:</b> Nicaragua</li>
             <li><b>Vivo en:</b> Managua</li>
-            <li><b>Edad:</b> 24</li>
+            <li><b>Edad:</b> 25</li>
             <li><b>Genero:</b> Masculino</li>
           </ul>
-          <button class="btn btn-theme-outline">Descargar CV</button>
+          <button class="btn btn-theme-outline" onclick="window.location.href='https://drive.google.com/drive/folders/1ca8UNyWfTYE-mbJKYjS1f3CiRNqqn1T2?usp=sharing'">Descargar CV</button>
         </div>
       </div>
     </div>
@@ -324,7 +324,7 @@
             </div>
           </div>
         </div>
-        <div class="grid-item template wireframes wow zoomIn">
+        <div class="grid-item template wireframes wow zoomIn"href="https://gymrepo.netlify.app/">
           <div class="img-place" data-src="assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
             <img src="assets/img/work/work-2.jpg" alt="">
             <div class="img-caption">
@@ -333,7 +333,7 @@
             </div>
           </div>
         </div>
-        <a class="grid-item apps ios wow zoomIn" href="https://63829a09c5e11b662866a4db--prismatic-zabaione-140ff6.netlify.app/">
+        <a class="grid-item apps ios wow zoomIn" href="https://gamingdashboard13.netlify.app/">
           <div class="img-place" data-src="assets/img/work/work-3.jpg">
             <img src="assets/img/work/work-10.jpg" alt="">
             <div class="img-caption">
