--- a/index.html
+++ b/index.html
@@ -324,15 +324,15 @@
             </div>
           </div>
         </div>
-        <div class="grid-item template wireframes wow zoomIn"href="https://gymrepo.netlify.app/">
-          <div class="img-place" data-src="assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
-            <img src="assets/img/work/work-2.jpg" alt="">
+        <a class="grid-item apps ios wow zoomIn" href="https://gymrepo.netlify.app/">
+          <div class="img-place" data-src="assets/img/work/work-3.jpg">
+            <img src="assets/img/work/work-10.jpg" alt="">
             <div class="img-caption">
-              <h5 class="fg-theme">Music App</h5>
-              <p>Musics</p>
+              <h5 class="fg-theme">GYM Web</h5>
+              <p>Fitness, Healthy</p>
             </div>
           </div>
-        </div>
+        </a>
         <a class="grid-item apps ios wow zoomIn" href="https://gamingdashboard13.netlify.app/">
           <div class="img-place" data-src="assets/img/work/work-3.jpg">
             <img src="assets/img/work/work-10.jpg" alt="">
