--- a/index.html
+++ b/index.html
@@ -315,15 +315,15 @@
       </div>
 
       <div class="gridder my-3">
-        <div class="grid-item apps wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
-            <img src="assets/img/work/work-1.jpg" alt="">
+        <a class="grid-item apps ios wow zoomIn" href="https://petsmart13.netlify.app/">
+          <div class="img-place" data-src="assets/img/work/work-6.jpg">
+            <img src="assets/img/work/work-6.jpg" alt="">
             <div class="img-caption">
-              <h5 class="fg-theme">Mobile Travel App</h5>
-              <p>Travel, Discovery</p>
+              <h5 class="fg-theme">PetSmart</h5>
+              <p>Pets, Home</p>
             </div>
           </div>
-        </div>
+        </a>
         <a class="grid-item apps ios wow zoomIn" href="https://gymrepo.netlify.app/">
           <div class="img-place" data-src="assets/img/work/work-6.jpg">
             <img src="assets/img/work/work-6.jpg" alt="">
