--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           </div>
         </div>
         <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
+          <div class="img-place" data-src="assets/img/work/work-7.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
             <img src="assets/img/work/work-7.jpg" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">Drugs Delivery App</h5>
@@ -360,12 +360,12 @@
             </div>
           </div>
         </div>
-        <div class="grid-item graphic ui-ux wireframes wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Musics Discover</h5> <p>Musics, Dashboard</p>">
+        <div class="grid-item apps ios wow zoomIn">
+          <div class="img-place" data-src="assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
             <img src="assets/img/work/work-2.jpg" alt="">
             <div class="img-caption">
-              <h5 class="fg-theme">Musics Discover</h5>
-              <p>Musics, Dashboard</p>
+              <h5 class="fg-theme">Music Discover</h5>
+              <p>Music, Party</p>
             </div>
           </div>
         </div>
