--- a/index.html
+++ b/index.html
@@ -310,12 +310,11 @@
         <button class="btn btn-theme-outline" data-filter=".template">Plantillas</button>
         <button class="btn btn-theme-outline" data-filter=".ios">IOS</button>
         <button class="btn btn-theme-outline" data-filter=".ui-ux">UI/UX</button>
-        <button class="btn btn-theme-outline" data-filter=".graphic">Graficos</button>
-        <!--<button class="btn btn-theme-outline" data-filter=".wireframes">Wireframes</button> -->
+        <button class="btn btn-theme-outline" data-filter=".web">WEB</button>
       </div>
 
       <div class="gridder my-3">
-        <a class="grid-item apps ios wow zoomIn" href="https://petsmart13.netlify.app/">
+        <a class="grid-item apps web template wow zoomIn" href="https://petsmart13.netlify.app/">
           <div class="img-place" data-src="assets/img/work/work-6.jpg">
             <img src="assets/img/work/work-5.jpg" alt="">
             <div class="img-caption">
@@ -324,7 +323,7 @@
             </div>
           </div>
         </a>
-        <a class="grid-item apps ios wow zoomIn" href="https://gymrepo.netlify.app/">
+        <a class="grid-item web template apps wow zoomIn" href="https://gymrepo.netlify.app/">
           <div class="img-place" data-src="assets/img/work/work-6.jpg">
             <img src="assets/img/work/work-6.jpg" alt="">
             <div class="img-caption">
@@ -333,7 +332,7 @@
             </div>
           </div>
         </a>
-        <a class="grid-item apps ios wow zoomIn" href="https://gamingdashboard13.netlify.app/">
+        <a class="grid-item app ui-ux wow zoomIn" href="https://gamingdashboard13.netlify.app/">
           <div class="img-place" data-src="assets/img/work/work-3.jpg">
             <img src="assets/img/work/work-10.jpg" alt="">
             <div class="img-caption">
@@ -342,12 +341,12 @@
             </div>
           </div>
         </a>
-        <div class="grid-item graphic ui-ux wow zoomIn">
+        <div class="grid-item web apps wow zoomIn">
           <div class="img-place" data-src="assets/img/work/work-4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Streaming</h5> <p>Games</p>">
             <img src="assets/img/work/work-4.jpg" alt="">
             <div class="img-caption">
-              <h5 class="fg-theme">Gaming Streaming</h5>
-              <p>Games</p>
+              <h5 class="fg-theme">Web Finanzas</h5>
+              <p>Business</p>
             </div>
           </div>
         </div>
@@ -360,7 +359,7 @@
             </div>
           </div>
         </div>
-        <div class="grid-item apps ios wow zoomIn">
+        <div class="grid-item ui-ux apps wow zoomIn">
           <div class="img-place" data-src="assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
             <img src="assets/img/work/work-2.jpg" alt="">
             <div class="img-caption">
