--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li><b>Edad:</b> 25</li>
             <li><b>Genero:</b> Masculino</li>
           </ul>
-          <button class="btn btn-theme-outline" onclick="window.location.href='https://drive.google.com/drive/folders/1ca8UNyWfTYE-mbJKYjS1f3CiRNqqn1T2?usp=sharing'">Descargar CV</button>
+          <button class="btn btn-theme-outline" onclick="window.location.href='https://drive.google.com/file/d/16k38Z1cWUSlWHauaC-HMpkATWprgytUo/view?usp=drive_link'">Descargar CV</button>
         </div>
       </div>
     </div>
@@ -177,7 +177,7 @@
               <div class="details">
                 <h5>Diplomado en Ciberseguridad</h5>
                 <small class="fg-theme">Escuela Nacional de Policia Española</small>
-                <p>Obtuve mi especialización en ciberseguridas, en la escuala nacional de la guarda civil española. A traves de su programa C1B3R WAll.</p>
+                <p>Obtuve mi especialización en ciberseguridad, en la escuela nacional de la guarda civil española. A traves de su programa C1B3R WAll Academy.</p>
               </div>
             </li>
             <li>
