--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             <li><b>Edad:</b> 25</li>
             <li><b>Genero:</b> Masculino</li>
           </ul>
-          <button class="btn btn-theme-outline" onclick="window.location.href='https://drive.google.com/file/d/16k38Z1cWUSlWHauaC-HMpkATWprgytUo/view?usp=drive_link'">Descargar CV</button>
+          <button class="btn btn-theme-outline" onclick="window.location.href='https://drive.google.com/file/d/1v62_ecoooaMpAj40QUzQPvKRtycagWqX/view?usp=sharing'">CV en Español</button>
+          <button class="btn btn-theme-outline" onclick="window.location.href='https://drive.google.com/file/d/1CfzIK9zeXwSpZbEOa2cX1AVSx1Y8g2bi/view?usp=sharing'">CV en Ingles</button>
         </div>
       </div>
     </div>
